--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -247,11 +247,11 @@ li {
     }
 
     @media (min-width: 768px) and (max-width: 991px) {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 
     @media (min-width: 576px) and (max-width: 767px) { 
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 
     @media only screen and (max-width: 600px) { 
