--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -38,7 +38,7 @@
                 height: 85%;
             }
     
-            @media only screen and (max-width: 600px) {
+            @media only screen and (max-width: 599px) {
                 height: 80%;
             }
 
